[package]
name = "never_jscore"
version = "1.0.0"
edition = "2024"

[lib]
name = "never_jscore"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo"
path = "src/lib.rs"

[dependencies]
deno_core = "0.365.0"
anyhow = "1.0.100"
tokio = { version = "1.48", features = ["rt", "time", "macros"] }
serde_json = "1.0"
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py38"] }
